# rift

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile
crates/rift-ipc/: Cargo.toml
crates/rift-ipc/src/: lib.rs
crates/riftctl/: Cargo.toml
crates/riftctl/src/: main.rs  setup.rs
crates/riftd/: Cargo.toml
crates/riftd/src/: config.rs  dbus.rs  keys.rs  layout.rs  lib.rs  main.rs  server.rs  state.rs
crates/riftd/tests/: dbus.rs  ipc.rs
docs/: README.md  building.md  install.md
docs/architecture/: cell-model.md  compositor-support.md  ipc-protocol.md  overview.md  transport.md
docs/config/: reference.md  riftrc.md
docs/layouts/: overview.md
docs/troubleshooting/: diagnostics.md  reliability.md
docs/usage/: keybindings.md  pager.md  riftctl.md
packaging/: .SRCINFO  PKGBUILD  README.md  rift.install  riftd.service
rift-kwin/: metadata.json  package-lock.json  package.json  tsconfig.json
rift-kwin/src/: dbus_transport.ts  kwin.d.ts  main.ts  protocol.ts  transport.ts
rift-kwin/test/: handshake.test.mjs  reconnect.test.mjs
rift-pager/: metadata.json
rift-pager/contents/config/: main.xml
rift-pager/contents/ui/: configGeneral.qml  main.qml
scripts/: install-kwin.sh  install-pager.sh
