[package]
name = "riftctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rift CLI: control and query the daemon over IPC"

[[bin]]
name = "riftctl"
path = "src/main.rs"

[dependencies]
rift-ipc.workspace = true
tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
