[package]
name = "riftd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rift daemon: layout engine, cell model, reconciliation, IPC server"

[[bin]]
name = "riftd"
path = "src/main.rs"

[dependencies]
rift-ipc.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
notify.workspace = true
tokio.workspace = true
zbus.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["sync"] }
